@@ -15,6 +15,7 @@
   =flyspell-correct-move=, so there is no difference in resulting point location
   when any of these functions is called with point at misspelled word.
 - Rewrite all tests using [[https://github.com/jorgenschaefer/emacs-buttercup][buttercup]] library.
+- Allow to correct and save the word in one pass (see #66).
 
 * v0.6.1
 
